AsyncLogGtest.java fails on assert with: decorator was not part of the decorator set specified at creation.

XMLWordPrintable

    • b26

      [----------] 15 tests from LogConfigurationTest
      [ RUN ] LogConfigurationTest.describe_vm
      [ OK ] LogConfigurationTest.describe_vm (0 ms)
      [ RUN ] LogConfigurationTest.update_output_vm
      [ OK ] LogConfigurationTest.update_output_vm (1 ms)
      [ RUN ] LogConfigurationTest.add_new_output_vm
      [ OK ] LogConfigurationTest.add_new_output_vm (0 ms)
      [ RUN ] LogConfigurationTest.disable_logging_vm
      [ OK ] LogConfigurationTest.disable_logging_vm (1 ms)
      [ RUN ] LogConfigurationTest.disable_output_vm
      # To suppress the following error report, specify this argument
      # after -XX: or in .hotspotrc: SuppressErrorAt=/logDecorations.cpp:78
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/opt/mach5/mesos/work_dir/slaves/3c846bae-ce30-4a97-93ee-9fef4497ccb6-S79375/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/4ed261ae-9048-480f-8cf0-77c31310e0a4/runs/de72afda-bbac-4196-a190-e9e18bb72392/workspace/open/src/hotspot/share/logging/logDecorations.cpp:78), pid=14245, tid=14251
      # assert(_decorators.is_decorator(decorator)) failed: decorator was not part of the decorator set specified at creation.
      #
      # JRE version: Java(TM) SE Runtime Environment (17.0+25) (fastdebug build 17-ea+25-LTS-2194)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 17-ea+25-LTS-2194, mixed mode, tiered, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0x15eff14] LogDecorations::decoration(LogDecorators::Decorator, char*, unsigned long) const+0x94
      #
      # Core dump will be written. Default location: Core dumps may be processed with "/opt/core.sh %p" (or dumping to /opt/mach5/mesos/work_dir/slaves/3c846bae-ce30-4a97-93ee-9fef4497ccb6-S79215/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/2238b884-8f87-4421-87ac-5458fc1cab8a/runs/754e3025-3a0f-4980-8cb7-242edfee7401/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_misc/scratch/0/core.14245)
      #
      # An error report file with more information is saved as:
      # /opt/mach5/mesos/work_dir/slaves/3c846bae-ce30-4a97-93ee-9fef4497ccb6-S79215/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/2238b884-8f87-4421-87ac-5458fc1cab8a/runs/754e3025-3a0f-4980-8cb7-242edfee7401/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_misc/scratch/0/hs_err_pid14245.log
      #
      # If you would like to submit a bug report, please visit:
      # https://bugreport.java.com/bugreport/crash.jsp
      #
      assert failed: assert(_decorators.is_decorator(decorator)) failed: decorator was not part of the decorator set specified at creation.
      [2021-05-28T06:31:22.369207678Z] Waiting for completion for process 14245
      [2021-05-28T06:31:22.369387970Z] Waiting for completion finished for process 14245

            Assignee:
            Xin Liu
            Reporter:
            Robbin Ehn
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: