8267926: AsyncLogGtest.java fails on assert with: decorator was not part of the decorator set specified at creation.